<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
	<modelVersion>4.0.0</modelVersion>
  	
	<groupId>edu.uw.bothell.css.dsl.mass</groupId>
  	<artifactId>mass-core</artifactId>
  	<packaging>jar</packaging>
	<version>1.3.0-RELEASE</version>

	<name>MASS Java Core Library</name>
	<description>A Parallelizing Library for Multi-Agent Spatial Simulation (MASS)</description>
	<inceptionYear>2010</inceptionYear>
	<url>http://depts.washington.edu/dslab/MASS/index.html</url>

	<properties>
	
		<!-- Dependency versions -->
		<commons-collections4.version>4.4</commons-collections4.version>
		<easymock.version>4.2</easymock.version>
		<gson.version>2.8.6</gson.version>
		<hazelcast.version>3.12.9</hazelcast.version>
		<jaxb.version>2.3.1</jaxb.version>
		<jsch.version>0.1.55</jsch.version>
		<junit.version>5.6.2</junit.version>
		<junit-platform-runner.version>1.5.2</junit-platform-runner.version>
		<kryo.version>4.0.2</kryo.version>
		<log4j.version>2.8.2</log4j.version>
		<netcdf-java.version>5.1.0</netcdf-java.version>
		<objenesis.version>3.1</objenesis.version>
		<ostermiller-utils.version>1.07.00</ostermiller-utils.version>
		<slf4j.version>1.7.30</slf4j.version>
		
		<!-- Plugin versions -->
		<findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
		<maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
		<maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
	
		<!-- Build properties -->	
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- Javadoc properties -->
		<copyright.message>Copyright 2010-2020 University of Washington. All rights reserved.</copyright.message>
	
	</properties>
  
	<organization>
    	<name>University of Washington, Bothell, Computing and Software Systems</name>
  		<url>http://www.bothell.washington.edu/css</url>
  	</organization>

	<developers>
    	<developer>
      	<id>mfukuda</id>
      	<name>Dr. Munehiro Fukuda</name>
      	<email>mfukuda@u.washington.edu</email>
		<organization>University of Washington, Bothell, Computing and Software Systems</organization>
      	<url>http://faculty.washington.edu/mfukuda</url>
      	<roles>
        	<role>architect</role>
        	<role>developer</role>
      	</roles>
      	<timezone>-8</timezone>
      	<properties>
        	<picUrl>http://faculty.washington.edu/mfukuda/mfukuda.jpg</picUrl>
      	</properties>
    	</developer>
  	</developers>

	<prerequisites>
    	<maven>3.1.0</maven>
  	</prerequisites>

	<scm>
		<developerConnection>https://bitbucket.org/mass_library_developers/mass_java_core.git</developerConnection>
	</scm>

	<repositories>
		<repository>
			<id>uwb-css-release</id>
			<name>UWB CSS Distributed Systems Lab Maven Repository Manager - Release Only</name>
			<url>http://depts.washington.edu/dslab/maven</url>
		</repository>
    	<repository>
        	<id>unidata-all</id>
        	<name>Unidata All</name>
        	<url>https://artifacts.unidata.ucar.edu/repository/unidata-all/</url>
    	</repository>
	</repositories>

	<dependencies>
		
		<!-- Unit Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

  		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
    		<groupId>org.ostermiller</groupId>
    		<artifactId>utils</artifactId>
    		<version>${ostermiller-utils.version}</version>
    		<scope>test</scope>
		</dependency>

		<!-- General helper libraries -->
		<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-collections4</artifactId>
    		<version>${commons-collections4.version}</version>
    		<scope>compile</scope>
		</dependency>

		<!-- For SSH connectivity to remote hosts -->
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>${jsch.version}</version>
			<scope>compile</scope>
		</dependency>
	
		<!--  For JAXB serialization to/from XML -->
		<dependency>
    		<groupId>javax.xml.bind</groupId>
    		<artifactId>jaxb-api</artifactId>
    		<version>${jaxb.version}</version>
    		<scope>compile</scope>
		</dependency>
		<dependency>
    		<groupId>org.glassfish.jaxb</groupId>
    		<artifactId>jaxb-runtime</artifactId>
    		<version>${jaxb.version}</version>
    		<scope>runtime</scope>
		</dependency>

  		<!-- Log4j API and Core implementation required for logging -->
		<dependency>
    		<groupId>org.slf4j</groupId>
    		<artifactId>slf4j-api</artifactId>
    		<version>${slf4j.version}</version>
    		<scope>compile</scope>
  		</dependency>
    
    	<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-slf4j-impl</artifactId>
    		<version>${log4j.version}</version>
    		<scope>compile</scope>
  		</dependency>
  
  		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-api</artifactId>
    		<version>${log4j.version}</version>
    		<scope>compile</scope>
  		</dependency>
  
  		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
    		<version>${log4j.version}</version>
    		<scope>compile</scope>
  		</dependency>

		<!-- For MASS Remote Debugger -->
		<dependency>
    		<groupId>com.google.code.gson</groupId>
    		<artifactId>gson</artifactId>
    		<version>${gson.version}</version>
    		<scope>compile</scope>
		</dependency>

		<!-- For Serialization Techniques -->
		<dependency>
			<groupId>com.esotericsoftware</groupId>
			<artifactId>kryo</artifactId>
			<version>${kryo.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.objenesis</groupId>
			<artifactId>objenesis</artifactId>
			<version>${objenesis.version}</version>
			<scope>compile</scope>
		</dependency>
  		
  		<!-- NetCDF File Format Support -->
  		<dependency>
            <groupId>edu.ucar</groupId>
            <artifactId>netcdf4</artifactId>
            <version>${netcdf-java.version}</version>
            <scope>compile</scope>
        </dependency>
  		
  		<!-- Cluster communications and distributed shared memory -->
  		<dependency>
        	<groupId>com.hazelcast</groupId>
        	<artifactId>hazelcast</artifactId>
        	<version>${hazelcast.version}</version>
            <scope>compile</scope>
    	</dependency>
  		
  	</dependencies>

	<build>
		<plugins>
			
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
					<encoding>${project.build.sourceEncoding}</encoding>
					<compilerArguments>
						<endorseddirs>${endorsed.dir}</endorseddirs>
					</compilerArguments>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<bottom>${copyright.message}</bottom>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
        			<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<useUnlimitedThreads>true</useUnlimitedThreads>
					<useFile>false</useFile>
					<excludedGroups>edu.uw.bothell.css.dsl.test.IntegrationTest</excludedGroups>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>test</goal>
						</goals>
						<phase>integration-test</phase>
						<configuration>
							<groups>edu.uw.bothell.css.dsl.test.IntegrationTest.class</groups>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<groupId>org.apache.maven.plugins</groupId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<groups>edu.uw.bothell.css.dsl.test.IntegrationTest</groups>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
